src/objects/DSCORGPKG__DiscoverOrg_Search__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__SearchType__c</fullName>
        <label>SearchType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recent</fullName>
                </value>
                <value>
                    <fullName>Favorite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Search_JSON__c</fullName>
        <label>Search JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ShowOnHover__c</fullName>
        <label>ShowOnHover</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__favSearchName__c</fullName>
        <label>favSearchName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__recSearchName__c</fullName>
        <label>recSearchName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__userid__c</fullName>
        <label>userid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>DiscoverOrg_Search</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg_Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>